--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ section {
 }
 /* Jumbotron */
 .jumbotron {
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0)), url(gambar/IMG_7207.JPG);
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0)), url(gambar/IMG_7207\ -\ Copy.JPG);
   background-size: cover;
   height: 550px;
   text-align: center;
