--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ section {
 .container .display-4 {
   font-family: Unna;
   color: white;
-  padding-top: 190px;
+  padding-top: 140px;
   margin-bottom: 30px;
   font-size: 25px;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
@@ -153,6 +153,11 @@ section {
     margin: auto;
     padding-bottom: 5px;
     margin-bottom: -8px;
+  }
+  .container .display-4 {
+    font-family: Unna;
+    color: white;
+    padding-top: 190px;
   }
   .jumbotron {
     margin-top: -75px;
